[package]
name = "tailspin"
version = "6.0.0"
edition = "2024"
authors = ["Ben Sadeh"]
description = "A log file highlighter"
repository = "https://github.com/bensadeh/tailspin"
keywords = ["log", "syntax-highlighting", "tail", "less"]
license = "MIT"
rust-version = "1.93"

[[bin]]
path = "src/main.rs"
name = "tspin"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5.66"
memchr = "2.8.0"
nu-ansi-term = "0.50.3"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
shell-words = "1.1.1"
shellexpand = "3.1.2"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.0.3"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "highlighters"
harness = false

[[bench]]
name = "no_match"
harness = false
