[package]
name = "tailspin"
version = "7.1.0"
edition = "2024"
authors = ["Ben Sadeh"]
description = "A log file highlighter"
repository = "https://github.com/bensadeh/tailspin"
keywords = ["log", "syntax-highlighting", "tail", "less"]
license = "MIT"
rust-version = "1.93"

[[bin]]
path = "src/main.rs"
name = "tspin"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
    "dep:anyhow",
    "dep:clap",
    "dep:clap_complete",
    "dep:rayon",
    "dep:shared_child",
    "dep:shell-words",
    "dep:shellexpand",
    "dep:signal-hook",
    "dep:tempfile",
    "dep:toml",
]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
aho-corasick = "1.1.4"
anyhow = { version = "1.0.103", optional = true }
clap = { version = "4.6.1", features = ["derive", "env", "wrap_help"], optional = true }
clap_complete = { version = "4.6.7", optional = true }
memchr = "2.8.2"
nu-ansi-term = "0.50.3"
rayon = { version = "1.12.0", optional = true }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shared_child = { version = "1.1.1", optional = true }
shell-words = { version = "1.1.1", optional = true }
shellexpand = { version = "3.1.2", optional = true }
tempfile = { version = "3.27.0", optional = true }
thiserror = "2.0.18"
toml = { version = "1.1.2", features = ["preserve_order"], optional = true }

[dev-dependencies]
assert_cmd = "2.2.2"
criterion = "0.8.2"
insta = "1.48.0"
proptest = "1.11.0"
tempfile = "3.27.0"

[[test]]
name = "e2e"
required-features = ["cli"]

[[bench]]
name = "highlighters"
harness = false

[[bench]]
name = "no_match"
harness = false

[[bench]]
name = "span_pipeline"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"

[target."cfg(unix)".dependencies]
signal-hook = { version = "0.4.4", optional = true }
